# Qt6QuickTemplate

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
include/: main.h
resources/: resources.qrc
resources/qml/: main.qml
src/: main.cpp
test/: CMakeLists.txt
tools/: deploy_vcpkg.py  requirements.txt  setup.py
tools/cmake/: Deploy.cmake  Qt6Deployer.cmake  config.cmake  executableCreator.cmake  libraryCreator.cmake  portfile_template.cmake  qtProject.cmake
